make the useful commentary available as dox
git-svn-id: svn://anonsvn.kde.org/home/kde/trunk/koffice@968187 283d02a7-25f6-0310-bc7c-ecb5cbfe19da

--- a/krita/plugins/Mainpage.dox
+++ b/krita/plugins/Mainpage.dox
@@ -1,4 +1,5 @@
-About plugins
+/**
+  \mainpage About plugins
 
 Plugins are components with a GUI that perform some action for Krita.
 Note that plugins are only loaded when a KisView is constructed; note 
