Some more todo's
A feature is always bigger than one would like

git-svn-id: svn://anonsvn.kde.org/home/kde/trunk/koffice@971350 283d02a7-25f6-0310-bc7c-ecb5cbfe19da

--- a/krita/plugins/extensions/backgrounds/TODO
+++ b/krita/plugins/extensions/backgrounds/TODO
@@ -3,3 +3,6 @@
 * add solid-color background patterns and use a categorized view for them
 * add a custom-color background pattern
 * add lots of nice patters (copy from MyPaint?)
+* integrate with custom image widget
+* integrate with image properties
+* loading/saving of KisImage
