--- a/krita/plugins/extensions/backgrounds/TODO
+++ b/krita/plugins/extensions/backgrounds/TODO
@@ -6,3 +6,4 @@
 * integrate with custom image widget
 * integrate with image properties
 * loading/saving of KisImage
+* set pattern on double click
